[package]
name = "hopscotch"
version = "0.1.0"
authors = ["Kenny Foner <kwf@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bench]]
name = "2d"
path = "benches/2d.rs"
harness = false

[dependencies]

[dev-dependencies]
quickcheck = "0.9"
criterion = "0.3"
rand = "0.7"