[package]
name = "hopscotch"
version = "0.0.1"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
description = "A FIFO queue for efficiently hopping and skipping between tagged items"
readme = "README.md"
homepage = "http://www.github.com/kwf/hopscotch"
repository = "http://www.github.com/kwf/hopscotch"
license = "MIT"
license-file = "LICENSE"
keywords = ["queue", "data-structure", "data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bench]]
name = "2d"
path = "benches/2d.rs"
harness = false

[dependencies]
im = "14.3"
nohash-hasher = "0.2"

[dev-dependencies]
quickcheck = "0.9"
criterion = "0.3"
rand = "0.7"