[package]
name = "hopscotch"
version = "0.1.1"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
description = "A FIFO queue for efficiently hopping and skipping between tagged items"
readme = "README.md"
homepage = "http://www.github.com/kwf/hopscotch"
repository = "http://www.github.com/kwf/hopscotch"
license = "MIT"
keywords = ["queue", "data-structure", "data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bench]]
name = "2d"
path = "benches/2d.rs"
harness = false

[dependencies]
rpds = "0.7"
archery = "0.4"

[dev-dependencies]
quickcheck = "0.9"
criterion = "0.3"
rand = "0.7"
tokio = { version = "1.8", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
rust-embed = "5.5"
structopt = "0.3"
